test/tests/compiler/15_arrays_and_pointer_arithmetic/valid/declarators/plx1_true_size.plx
pub fn main(none) i32 {
    arr: [true]i32 = $(10)
    return 10 - arr[0]
}
