test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/conflicting_array_declarations.plx
pub arr: [6]i32;

pub fn main(none) i32 {
    return arr[0]
}

#  it's illegal to redeclare arr as a different type
pub arr: [5]i32;
